Add Helpmonks and Fastmail email action sync
